Add img/gui.png. Other misc changes.

--- a/aboly.html
+++ b/aboly.html
@@ -5093,7 +5093,7 @@ img.characterimg {
 <p>
 <a id="liuyi"></a><span class="lyterm">艺</span>指<span class="lykeyword">六艺</span>，包括礼（礼仪）、乐（音乐）、射（射箭）、御（驾车）、书（文学）、数（算术），见《周礼&middot;地官司徒&middot;保氏》。它们原是西周贵族教育的科目，随着春秋以来文化学术由官学<a href="#wenhuaxiayi">下移</a>至私学，就成为儒家教育科目。六艺属于实务型技能，孔子认为应该熟习但不可<a href="#19.4">拘泥</a>其中，所以用<span class="lyterm">游</span>。现代&ldquo;拜师学艺&rdquo;之类的&ldquo;艺&rdquo;，就是技能、本领的统称。</p>
 <p>
-<a id="liujing"></a>西汉尊儒以来，六艺又指儒家<span class="lykeyword">六经</span>：《<a href="#shijing">诗经</a>》、《<a href="#shangshu">尚书</a>》、《仪礼》、《乐经》（已佚失）、《<a href="#yijing">周易</a>》、《春秋》，相传均由孔子删定。它们既是儒家标准教材，又成为治国方略的依据。<span class="lyseealso"><span>【参】</span><span>《史记&middot;滑稽列传》开篇，<span class="lyq">孔子曰：&ldquo;六艺于治一也。《礼》以节人，《乐》以发和，《书》以道事，《诗》以达意，《易》以神化，《春秋》以义。&rdquo;</span></span></span>
+<a id="liujing"></a>西汉尊儒以来，六艺又指儒家<span class="lykeyword">六经</span>：《<a href="#shijing">诗经</a>》、《<a href="#shangshu">尚书</a>》、《仪礼》（唐代以后《礼记》更受重视）、《乐经》（已佚失）、《<a href="#yijing">周易</a>》、《春秋》，相传均由孔子删定。它们既是儒家标准教材，又成为治国方略的依据。<span class="lyseealso"><span>【参】</span><span>《史记&middot;滑稽列传》开篇，<span class="lyq">孔子曰：&ldquo;六艺于治一也。《礼》以节人，《乐》以发和，《书》以道事，《诗》以达意，《易》以神化，《春秋》以义。&rdquo;</span></span></span>
 </p>
 </li>
 </ul>
@@ -7501,11 +7501,11 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">胜</span>（旧读<span class="lypinyin">shēng</span>）：力能承担，经受得起，can afford。<span class="lyterm">不胜</span>指执圭时举轻若重，专注凝重。</p>
+<span class="lyterm">胜</span>（旧读<span class="lypinyin">shēng</span>）：力能承担，经受得起，can afford。<span class="lyterm">不胜</span>指执圭时举轻若重，专注端凝。</p>
 </li>
 <li>
 <p>
-<span class="lyterm">上如揖，下如授</span>：向上举好像作揖，往下收好像递交给人东西。这说的是执圭的位置范围。</p>
+<span class="lyterm">上如揖，下如授</span>：向上举的姿势好像作揖，往下收好像递交给人东西。这说的是执圭的位置范围。</p>
 </li>
 <li>
 <p>
@@ -7513,7 +7513,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">享礼</span>：使臣向对方国君进献礼物的仪式，这是展示本国国力文化的机会。<span class="lyterm">享</span>：供献。</p>
+<span class="lyterm">享礼</span>：使臣向对方国君进献礼物的仪式，这是展示本国国力文化的场合。<span class="lyterm">享</span>：供献。</p>
 </li>
 <li>
 <p>
@@ -7603,7 +7603,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">变食</span>：指不吃荤。<a id="hun1"></a><span class="lykeyword">荤</span>为葱、蒜、韭、椿等刺激性蔬菜，而不是现代说的鸡鸭鱼肉，它们在古代称为<a href="#xing1"><span class="lykeyword">腥</span></a>。</p>
+<span class="lyterm">变食</span>：指不吃荤。<a id="hun1"></a><span class="lykeyword">荤</span>为葱、蒜、韭、椿等刺激性蔬菜，而不是现代说的鸡鸭鱼牛羊肉，它们在古代称为<span class="lykeyword"><a href="#xing1">腥</a></span>。</p>
 </li>
 <li>
 <p>
@@ -9440,8 +9440,7 @@ img.characterimg {
 <a href="#zengshen">曾子</a>曰：&ldquo;君子以文会友，以友辅仁。&rdquo;</p>
 </div>
 <div class="lyblobannotation">
-<p>
-<span class="lyseealso"><span>【参】</span><span><a href="#1.1" class="lyref">1.1</a> </span></span>
+<p>本章可以和前两章连起来理解。<span class="lyseealso"><span>【参】</span><span><a href="#1.1" class="lyref">1.1</a> </span></span>
 </p>
 </div>
 </div>
@@ -9863,10 +9862,12 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">隐</span>：隐瞒，掩蔽。这是由孔子推崇的<a href="#junchenfuzi">君臣父子</a>关系决定的，所谓血浓于水，家庭关系先于社会关系。后世倾向于宣扬先忠国而后孝亲，与此形成对比。<span class="lyseealso"><span>【参】</span><span>《礼记&middot;檀弓上》：<span class="lyq">事亲有隐而无犯，&hellip;&hellip;事君有犯而无隐，&hellip;&hellip;事师无犯无隐。</span>《孟子&middot;尽心上》对这个主题有进一步发挥。有人问孟子：假如<a href="#shun">舜帝</a>的父亲杀了人，舜会怎么做呢？孟子答：舜会听凭法官<a href="#gaoyao">皋陶</a>逮捕父亲，因为这是他应受的惩罚；但作为儿子，舜又会把父亲从监狱里救出来，一起远走高飞快乐生活。<span class="lyq">舜视弃天下，犹弃敝蹝也；窃负而逃，遵海滨而处，终身訢然，乐而忘天下。</span>（蹝（<span class="lypinyin">xǐ</span>）：草鞋。訢（<span class="lypinyin">xīn</span>）：通&ldquo;欣&rdquo;。）《庄子&middot;盗跖》也认为：<span class="lyq">直躬证父，<a href="#weishengao">尾生</a>溺死，信之患也。</span><a id="weizunzhehui"></a>《公羊传&middot;闵公元年》提出，孔子笔削《春秋》的一个原则是<span class="lyq">为尊者讳，为亲者讳，为贤者讳</span>，这对中国社会产生了深远影响，形成了牢固的人情纽带。</span></span>
-</p>
+<span class="lyterm">隐</span>：隐瞒，掩蔽。这是由孔子推崇的<a href="#junchenfuzi">君臣父子</a>关系决定的，所谓血浓于水，家庭关系先于社会关系。后世倾向于宣扬先忠国然后孝亲，与此形成对比。</p>
 </li>
 </ul>
+<p>
+<span class="lyseealso"><span>【参】</span><span>《礼记&middot;檀弓上》：<span class="lyq">事亲有隐而无<a href="#fan4">犯</a>，&hellip;&hellip;事君有犯而无隐，&hellip;&hellip;事师无犯无隐。</span>《孟子&middot;尽心上》对这个主题有进一步发挥。有人问孟子：假如<a href="#shun">舜帝</a>的父亲杀了人，舜会怎么做呢？孟子答：舜会听凭法官<a href="#gaoyao">皋陶</a>逮捕父亲，因为这是他应受的惩罚；但作为儿子，舜又会把父亲从监狱里救出来，一起远走高飞快乐生活。<span class="lyq">舜视弃天下，犹弃敝蹝也；窃负而逃，遵海滨而处，终身訢然，乐而忘天下。</span>（蹝（<span class="lypinyin">xǐ</span>）：草鞋。訢（<span class="lypinyin">xīn</span>）：通&ldquo;欣&rdquo;。）《庄子&middot;盗跖》也认为：<span class="lyq">直躬证父，<a href="#weishengao">尾生</a>溺死，信之患也。</span><a id="weizunzhehui"></a>《公羊传&middot;闵公元年》提出，孔子笔削《春秋》的一个原则是<span class="lyq">为尊者讳，为亲者讳，为贤者讳</span>，这对中国社会产生了深远影响，形成了牢固的人情纽带。</span></span>
+</p>
 </div>
 </div>
 <a id="13.19"></a>
@@ -14409,7 +14410,7 @@ img.characterimg {
 <p>
 <a id="yanlu"></a><span class="lycharname">颜路</span>：颜无繇（<span class="lypinyin">y&oacute;u</span>），字路，鲁国人，<a href="#yanhui">颜回</a>之父，少孔子6岁，是孔子的早期弟子。 <a href="#11.8" class="lyref">11.8</a> </p>
 <p>
-<a id="yong"></a><span class="lycharname">雍</span>，<span class="lycharname">仲弓</span>：冉雍，字仲弓，鲁国人，少孔子29岁，<a href="#11.3">孔门十哲</a>之一。《孔子家语&middot;弟子行》中，<a href="#zigong">子贡</a>形容他<span class="lyq">在贫如客，使其臣如借，不<a href="#qiannu">迁怒</a>，不深怨，不录旧罪。</span>（如客：形容庄重自持，不因贫降志。如借：形容谨慎有礼，不自居其位。录：记住。） <a href="#5.5" class="lyref">5.5</a> <a href="#6.1" class="lyref">6.1</a> <a href="#6.2" class="lyref">6.2</a> <a href="#6.6" class="lyref">6.6</a> <a href="#11.3" class="lyref">11.3</a> <a href="#12.2" class="lyref">12.2</a> <a href="#13.2" class="lyref">13.2</a> </p>
+<a id="yong"></a><span class="lycharname">雍</span>，<span class="lycharname">仲弓</span>：冉雍，字仲弓，鲁国人，少孔子29岁，<a href="#11.3">孔门十哲</a>之一。《孔子家语&middot;弟子行》中，<a href="#zigong">子贡</a>形容他<span class="lyq">在贫如客，使其臣如借，不<a href="#qiannu">迁怒</a>，不深怨，不录旧罪。</span>（如客：形容庄重自持，不因贫降志。如借：形容谨慎有礼，不自居其位。录：记住。）如果《荀子》提到的&ldquo;子弓&rdquo;就是冉雍（例同仲由字子路，又称季路），那么他在当时很受尊崇，与孔子并列，被称为<span class="lyq">大儒</span>、<span class="lyq">圣人之不得势者</span>。 <a href="#5.5" class="lyref">5.5</a> <a href="#6.1" class="lyref">6.1</a> <a href="#6.2" class="lyref">6.2</a> <a href="#6.6" class="lyref">6.6</a> <a href="#11.3" class="lyref">11.3</a> <a href="#12.2" class="lyref">12.2</a> <a href="#13.2" class="lyref">13.2</a> </p>
 <p>
 <a id="youruo"></a><span class="lycharname">有若</span>，<span class="lycharname">有子</span>：字子有，鲁国人，少孔子33岁，《孔子家语&middot;七十二弟子解》称他强识好古。《孟子&middot;滕文公上》、《仲尼弟子列传》载，孔子去世后，众弟子思慕不已，因为有若的气质见识与孔子相似，<a href="#zixia">子夏</a>、<a href="#ziyou">子游</a>、<a href="#zizhang">子张</a>等就奉他为师，但有若之才德不足以服众，这种偶像崇拜很快被放弃了。《礼记&middot;檀弓下》载，<a href="#aigong">鲁哀公</a>曾向他问礼，他去世后，继任的鲁悼公（前467年&mdash;前437年在位）亲自前来吊唁。他在《论语》中出现的4次，都是传道授业的口吻，除 <a href="#12.9" class="lyref">12.9</a>  外，称谓都是有子，待遇仅次于<a href="#zengshen">曾参</a>。 <a href="#1.2" class="lyref">1.2</a> <a href="#1.12" class="lyref">1.12</a> <a href="#1.13" class="lyref">1.13</a> <a href="#12.9" class="lyref">12.9</a> </p>
 <p>
@@ -14434,12 +14435,12 @@ img.characterimg {
 <p>
 <a id="zixia"></a><span class="lycharname">子夏</span>，<span class="lycharname">商</span>：卜商，字子夏，晋国温邑（今河南省焦作市温县）人，少孔子44岁，<a href="#11.3">孔门十哲</a>之一。他家境清贫，笃学精思，敬谨尚贤，《史记&middot;孔子世家》在记述孔子笔削《春秋》时特别说，<span class="lyq">子夏之徒不能赞一辞</span>（赞：助），可见他在诸弟子中的理论水平很突出。《后汉书&middot;徐防传》引徐防上疏：<span class="lyq">臣闻《诗》《书》《礼》《乐》，定自孔子；发明章句，始于子夏。</span>（发明：阐述意旨。章句：分章断句解读。）孔子去世后，他到魏国西河（在今山西、陕西黄河交界地带）讲学，魏文侯（前445年&mdash;前396年在位）师事之，咨问国政，《礼记&middot;乐记》记有他们关于古乐和新乐的问答。他所创立的西河学派，常被认为是由儒入法的重要环节。子夏晚年因哭子之丧而失明，事见《礼记&middot;檀弓上》。据说今本《<a href="#shijing">诗经</a>》由他而传，《春秋公羊传》、《春秋谷梁传》的作者也都是他的学生。 <a href="#1.7" class="lyref">1.7</a> <a href="#2.8" class="lyref">2.8</a> <a href="#3.8" class="lyref">3.8</a> <a href="#6.13" class="lyref">6.13</a> <a href="#11.3" class="lyref">11.3</a> <a href="#11.16" class="lyref">11.16</a> <a href="#12.5" class="lyref">12.5</a> <a href="#12.22" class="lyref">12.22</a> <a href="#13.17" class="lyref">13.17</a> <a href="#19.3" class="lyref">19.3</a> <a href="#19.4" class="lyref">19.4</a> <a href="#19.5" class="lyref">19.5</a> <a href="#19.6" class="lyref">19.6</a> <a href="#19.7" class="lyref">19.7</a> <a href="#19.8" class="lyref">19.8</a> <a href="#19.9" class="lyref">19.9</a> <a href="#19.10" class="lyref">19.10</a> <a href="#19.11" class="lyref">19.11</a> <a href="#19.12" class="lyref">19.12</a> <a href="#19.13" class="lyref">19.13</a> </p>
 <p>
-<a id="ziyou"></a><span class="lycharname">子游</span>，<span class="lycharname">言游</span>，<span class="lycharname">偃</span>：言偃，字子游，<a href="#taibo">吴国</a>人，少孔子45岁，<a href="#11.3">孔门十哲</a>之一。他是孔子知名弟子中唯一的南方人，今江苏省常熟市留有言子墓等遗迹。 <a href="#2.7" class="lyref">2.7</a> <a href="#4.26" class="lyref">4.26</a> <a href="#6.14" class="lyref">6.14</a> <a href="#11.3" class="lyref">11.3</a> <a href="#17.4" class="lyref">17.4</a> <a href="#19.12" class="lyref">19.12</a> <a href="#19.14" class="lyref">19.14</a> <a href="#19.15" class="lyref">19.15</a> </p>
+<a id="ziyou"></a><span class="lycharname">子游</span>，<span class="lycharname">言游</span>，<span class="lycharname">偃</span>：言偃，字子游，<a href="#taibo">吴国</a>人，少孔子45岁，<a href="#11.3">孔门十哲</a>之一。他是孔子知名弟子中唯一的南方人，今江苏省常熟市留有言子墓等遗迹。<a href="#zizhang">子张</a>的儿子申祥是他的女婿。 <a href="#2.7" class="lyref">2.7</a> <a href="#4.26" class="lyref">4.26</a> <a href="#6.14" class="lyref">6.14</a> <a href="#11.3" class="lyref">11.3</a> <a href="#17.4" class="lyref">17.4</a> <a href="#19.12" class="lyref">19.12</a> <a href="#19.14" class="lyref">19.14</a> <a href="#19.15" class="lyref">19.15</a> </p>
 <p>
 <a id="lijiliyun"></a>《礼记&middot;礼运》通过子游与孔子问答的形式，描绘了儒家理想中的<span class="lykeyword">大同</span>社会：<span class="lyq">大道之行也，天下为公，选贤与能，讲信修睦。故人不独亲其亲，不独子其子；使老有所终，壮有所用，幼有所长，矜寡、孤独、废疾者皆有所养；男有分，女有归。货，恶其弃于地也，不必藏于己；力，恶其不出于身也，不必为己。</span>（矜：通&ldquo;鳏&rdquo;（<span class="lypinyin">guān</span>），成年男子无妻或丧妻。）接着指出，在<span class="lyq">天下为家</span>的时代，如能<span class="lyq">礼义以为纪，以正君臣，以笃父子，以睦兄弟，以和夫妇</span>，仍不失为<span class="lykeyword">小康</span>。然后重点论述了礼义对于维系社会的价值：<span class="lyq">故欲恶者，心之大端也。人藏其心，不可测度也。美恶皆在其心，不见其色也，欲一以穷之，舍礼何以哉？&hellip;&hellip;故礼义也者，人之大端也，&hellip;&hellip;故唯圣人为知礼之不可以已也。故坏国、丧家、亡人，必先去其礼。</span>
 </p>
 <p>
-<a id="zizhang"></a><span class="lycharname">子张</span>，<span class="lycharname">师</span>，<span class="lycharname">张</span>：颛（<span class="lypinyin">zhuān</span>）孙师，字子张，鲁国人，少孔子48岁。《论语》诸弟子中数他最年轻，其次是<a href="#zengshen">曾参</a>和<a href="#fanxu">樊须</a>。《韩非子&middot;显学》称，孔子之后儒分八派，&ldquo;子张之儒&rdquo;被排在第一位，超过&ldquo;<a href="#zisi">子思</a>之儒&rdquo;，可惜今已不传。他的祖先是和<a href="#chenchengzi">陈公子完</a>一同逃往齐国的公子颛孙（《左传&middot;庄公二十二年》），后来又到鲁国定居，就以颛孙为氏。传到子张这一代，已经是<span class="lyq">鲁之鄙家</span>了（《吕氏春秋&middot;尊师》），想必有不为人知的艰辛，但他志高求进，心气很足，使年纪相仿的同门感到敬畏。据《史记&middot;儒林列传》，孔子过世后他去了陈国居住，就是不曾忘怀遥远的血脉吧？他去世时<a href="#zengshen">曾参</a>正在服母丧，所以是英年早逝（《礼记&middot;檀弓下》）。病重之时，他把儿子召到身旁，像是自言自语道：<span class="lyq">&ldquo;君子<a href="#yue1a">曰</a>终，小人曰死，吾今日其<a href="#shu4a">庶几</a>乎？&rdquo;</span>（《礼记&middot;檀弓上》。） <a href="#2.18" class="lyref">2.18</a> <a href="#2.23" class="lyref">2.23</a> <a href="#5.19" class="lyref">5.19</a> <a href="#11.16" class="lyref">11.16</a> <a href="#11.18" class="lyref">11.18</a> <a href="#11.20" class="lyref">11.20</a> <a href="#12.6" class="lyref">12.6</a> <a href="#12.10" class="lyref">12.10</a> <a href="#12.14" class="lyref">12.14</a> <a href="#12.20" class="lyref">12.20</a> <a href="#14.40" class="lyref">14.40</a> <a href="#15.6" class="lyref">15.6</a> <a href="#15.42" class="lyref">15.42</a> <a href="#17.6" class="lyref">17.6</a> <a href="#19.1" class="lyref">19.1</a> <a href="#19.2" class="lyref">19.2</a> <a href="#19.3" class="lyref">19.3</a> <a href="#19.15" class="lyref">19.15</a> <a href="#19.16" class="lyref">19.16</a> <a href="#20.2" class="lyref">20.2</a> </p>
+<a id="zizhang"></a><span class="lycharname">子张</span>，<span class="lycharname">师</span>，<span class="lycharname">张</span>：颛（<span class="lypinyin">zhuān</span>）孙师，字子张，鲁国人，少孔子48岁。《论语》诸弟子中数他最年轻，其次是<a href="#zengshen">曾参</a>和<a href="#fanxu">樊须</a>。《韩非子&middot;显学》称，孔子之后儒分八派，&ldquo;子张之儒&rdquo;被排在第一位，超过&ldquo;<a href="#zisi">子思</a>之儒&rdquo;，可惜今已不传。他的祖先是和<a href="#chenchengzi">陈公子完</a>一同逃往齐国的公子颛孙（《左传&middot;庄公二十二年》），后来又到鲁国定居，就以颛孙为氏。传到子张这一代，已经是<span class="lyq">鲁之鄙家</span>了（《吕氏春秋&middot;尊师》），还做过马贩子（《尸子&middot;劝学》），想必有不为人知的艰辛，但他志高求进，心气很足，使年纪相仿的同门感到敬畏。据《史记&middot;儒林列传》，孔子过世后他去了陈国居住，就是不曾忘怀遥远的血脉吧？他去世时<a href="#zengshen">曾参</a>正在服母丧，所以是英年早逝（《礼记&middot;檀弓下》）。病重之时，他把儿子召到身旁，像是自言自语道：<span class="lyq">&ldquo;君子<a href="#yue1a">曰</a>终，小人曰死，吾今日其<a href="#shu4a">庶几</a>乎？&rdquo;</span>（《礼记&middot;檀弓上》。） <a href="#2.18" class="lyref">2.18</a> <a href="#2.23" class="lyref">2.23</a> <a href="#5.19" class="lyref">5.19</a> <a href="#11.16" class="lyref">11.16</a> <a href="#11.18" class="lyref">11.18</a> <a href="#11.20" class="lyref">11.20</a> <a href="#12.6" class="lyref">12.6</a> <a href="#12.10" class="lyref">12.10</a> <a href="#12.14" class="lyref">12.14</a> <a href="#12.20" class="lyref">12.20</a> <a href="#14.40" class="lyref">14.40</a> <a href="#15.6" class="lyref">15.6</a> <a href="#15.42" class="lyref">15.42</a> <a href="#17.6" class="lyref">17.6</a> <a href="#19.1" class="lyref">19.1</a> <a href="#19.2" class="lyref">19.2</a> <a href="#19.3" class="lyref">19.3</a> <a href="#19.15" class="lyref">19.15</a> <a href="#19.16" class="lyref">19.16</a> <a href="#20.2" class="lyref">20.2</a> </p>
 <a id="characters-others"></a>
 <h2>其他</h2>
 <p>以下收录了在不同章中重复出现过，而又不是孔子弟子的人物，也包括季氏、孟氏这样的家族，共36条。</p>
@@ -14891,6 +14892,10 @@ img.characterimg {
 <span class="lybook">《孔子家语》</span>，〔魏〕王肃编著，王国轩、王秀梅译注，中华书局，中华经典名著全本全注全译丛书，2011年。</p>
 <p>
 <span class="lybook">《孟子译注》</span>，杨伯峻编著，中华书局，1960年。</p>
+<p>
+<span class="lybook">《荀子校注》</span>，张觉校注，岳麓书社，古典名著标准读本，2006年。</p>
+<p>
+<span class="lybook">《荀子集解》</span>，〔清〕王先谦撰，沈啸寰、王星贤整理，中华书局，中华国学文库，2012年。</p>
 <p>
 <span class="lybook">《韩诗外传笺疏》</span>，屈守元著，巴蜀书社，2012年。</p>
 <p>
