--- a/aboly.html
+++ b/aboly.html
@@ -1192,7 +1192,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">诸</span>：代词，用作宾语，相当于&ldquo;之&rdquo;。另外还能代替&ldquo;之于&rdquo;和&ldquo;之乎&rdquo;。<span class="lyexample"><span>【例】</span><span><a href="#5.24" class="lyref">5.24</a> <span class="lyq">乞诸其邻而与之。</span><a href="#6.6" class="lyref">6.6</a> <span class="lyq">山川其舍诸？</span></span></span>
+<a id="zhu1"></a><span class="lyterm">诸</span>：代词，用作宾语，相当于&ldquo;之&rdquo;。另外还能代替&ldquo;之于&rdquo;和&ldquo;之乎&rdquo;。<span class="lyexample"><span>【例】</span><span><a href="#5.24" class="lyref">5.24</a> <span class="lyq">乞诸其邻而与之。</span><a href="#6.6" class="lyref">6.6</a> <span class="lyq">山川其舍诸？</span></span></span>
 </p>
 </li>
 <li>
@@ -3030,7 +3030,8 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">义之与比</span>：&ldquo;<a href="#ozhiv">O之V</a>&rdquo;的倒装结构，以符合<a href="#yi4">义</a>为标准。<span class="lyterm">比</span>：并排，并列，引申为拟照，依据。</p>
+<span class="lyterm">义之与比</span>：&ldquo;<a href="#ozhiv">O之V</a>&rdquo;的倒装结构，以符合<a href="#yi4">义</a>为标准。<span class="lyterm">比</span>：并排，并列，引申为拟照，依据。<span class="lyseealso"><span>【参】</span><span>《尸子&middot;仁意》有一句话，可作本章的注脚：<span class="lyq">内举不避亲，外举不避仇。仁者之于善也，无择也，无恶也，惟善之所在。</span></span></span>
+</p>
 </li>
 </ul>
 </div>
@@ -3102,7 +3103,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm"><a href="#wei2b">为</a>（<span class="lypinyin">w&eacute;i</span>）国</span>：指治国理政。<span class="lyseealso"><span>【参】</span><span>《韩诗外传》第1卷第5章：<span class="lyq">人之命在天，国之命在礼。君人者，降礼尊贤而<a href="#wangdao">王</a>，重法爱民而霸，好利多诈而危，权谋倾覆而亡。</span>《左传&middot;襄公十三年》：<span class="lyq">让，礼之主也。<a href="#fanxuanzi">范宣子</a>让，其下皆让。&hellip;&hellip;世之治也，君子尚能而让其下，小人农力以事其上，是以上下有礼，而谗<a href="#te2">慝</a><a href="#chu4">黜</a>远，由不争也，谓之懿德。及其乱也，君子称其功以<a href="#jia1a">加</a>小人，小人<a href="#fa2">伐</a>其技以<a href="#ping2">冯</a>君子，是以上下无礼，乱虐并生，由争善也，谓之昏德。国家之敝，恒必由之。</span>（农力：努力。）《战国策》刘向书录：<span class="lyq">五<a href="#zhuhou">伯</a>之起，尊事周室。五伯之后，&hellip;&hellip;犹以义相支持，歌说以相感，聘觐以相交，期会以相一，盟誓以相救。天子之命，犹有所行；会享之国，犹有所耻；小国得有所依，百姓得有所息。故孔子曰：&ldquo;能以礼让为国乎，何有？&rdquo;周之流化，岂不大哉！</span></span></span>
+<a id="wei2b"></a><span class="lyterm">为</span>（<span class="lypinyin">w&eacute;i</span>）：动词，等于一般性的做，do，可以搭配的对象很宽泛，要根据上下文具体理解。<span class="lyterm">为国</span>：指治国理政。<span class="lyseealso"><span>【参】</span><span>《韩诗外传》第1卷第5章：<span class="lyq">人之命在天，国之命在礼。君人者，降礼尊贤而<a href="#wangdao">王</a>，重法爱民而霸，好利多诈而危，权谋倾覆而亡。</span>《左传&middot;襄公十三年》：<span class="lyq">让，礼之主也。<a href="#fanxuanzi">范宣子</a>让，其下皆让。&hellip;&hellip;世之治也，君子尚能而让其下，小人农力以事其上，是以上下有礼，而谗<a href="#te2">慝</a><a href="#chu4">黜</a>远，由不争也，谓之懿德。及其乱也，君子称其功以<a href="#jia1a">加</a>小人，小人<a href="#fa2">伐</a>其技以<a href="#ping2">冯</a>君子，是以上下无礼，乱虐并生，由争善也，谓之昏德。国家之敝，恒必由之。</span>（农力：努力。）《战国策》刘向书录：<span class="lyq">五<a href="#zhuhou">伯</a>之起，尊事周室。五伯之后，&hellip;&hellip;犹以义相支持，歌说以相感，聘觐以相交，期会以相一，盟誓以相救。天子之命，犹有所行；会享之国，犹有所耻；小国得有所依，百姓得有所息。故孔子曰：&ldquo;能以礼让为国乎，何有？&rdquo;周之流化，岂不大哉！</span></span></span>
 </p>
 </li>
 <li>
@@ -3166,7 +3167,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<a id="shu4"></a><span class="lyterm">恕</span>：推己及人。从字形结构看，可以理解为视人心如己心。更精准的解释是 <a href="#15.24" class="lyref">15.24</a> <span class="lyq">己所不欲，勿施于人。</span>《说文解字》直接解释为仁，也就是&ldquo;恕&rdquo;的正向表现：<a href="#6.30" class="lyref">6.30</a> <span class="lyq">己欲立而立人，己欲达而达人。</span>
+<a id="shu4"></a><span class="lyterm">恕</span>：推己及人。从字形结构看，可以理解为视人心如己心。更精准的解释是 <a href="#15.24" class="lyref">15.24</a> <span class="lyq">己所不欲，勿施于人。</span>《说文解字》直接解释为仁，也就是&ldquo;恕&rdquo;的正向表现：<a href="#6.30" class="lyref">6.30</a> <span class="lyq">己欲立而立人，己欲达而达人。</span><span class="lyseealso"><span>【参】</span><span>《尸子&middot;恕》：<span class="lyq">恶<a href="#zhu1">诸</a>人，则去诸己；欲诸人，则求诸己&mdash;&mdash;此恕也。</span></span></span>
 </p>
 </li>
 </ul>
@@ -5206,7 +5207,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">行三军</span>：统领军队。<span class="lyterm">行</span>：做，从事，其用法比较灵活，和&ldquo;为&rdquo;相似。<span class="lyexample"><span>【例】</span><span>《左传&middot;隐公元年》：<span class="lyq">多行不义，必自毙，子姑待之。</span></span></span>
+<span class="lyterm">行三军</span>：统领军队。<span class="lyterm">行</span>：做，从事，其用法比较灵活，和<a href="#wei2b">为</a>相似。<span class="lyexample"><span>【例】</span><span>《左传&middot;隐公元年》：<span class="lyq">多行不义，必自毙，子姑待之。</span></span></span>
 </p>
 <p>
 <a id="sanjun"></a><span class="lyterm">三军</span>：大诸侯国拥有的军队的总称，也泛指军队。《周礼&middot;地官司徒&middot;小司徒》：<span class="lyq">五人为伍，五伍为两，四两为卒，五卒为旅，五旅为师，五师为军。</span>《周礼&middot;夏官司马&middot;序官》：<span class="lyq">凡制军，万有二千五百人为军。<a href="#tianzi">王</a>六军，大国三军，次国二军，小国一军。</span>东周时征伐渐起，&ldquo;军&rdquo;的实际编制不断扩大，如前259年秦赵长平之战后，惨胜的秦军分为三军，估计仍有几十万之众。 </p>
@@ -5215,7 +5216,7 @@ img.characterimg {
 <p>
 <a id="baohupinghe"></a><span class="lyterm">暴虎冯（<span class="lypinyin">p&iacute;ng</span>）河</span>：空手与虎搏斗，徒步趟水（而不愿乘船）过河。出自《诗经&middot;小雅&middot;小旻》（<span class="lypinyin">m&iacute;n</span>）：<span class="lyq">不敢暴虎，不敢冯河。人知其一，莫知其他。</span>原诗是说<a href="#zhouyouwang">周幽王</a>昏聩妄为，作者深恐国运将衰，只有小心度日。</p>
 <p>
-<span class="lyterm">暴</span>：徒手搏击。<a id="ping2"></a><span class="lyterm">冯</span>：徒步涉水。从来源上看，暴和冯都有欺凌、侵侮的含义。成语&ldquo;暴虎冯河&rdquo;形容人有勇无谋，鲁莽冒险。</p>
+<span class="lyterm">暴</span>：徒手搏击。<a id="ping2"></a><span class="lyterm">冯</span>：徒步涉水。从来源上看，暴和冯都有欺凌、侵侮的意思。成语&ldquo;暴虎冯河&rdquo;形容人有勇无谋，鲁莽冒险。</p>
 </li>
 </ul>
 </div>
@@ -5232,12 +5233,12 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">可</span>：这里的判断标准，并非客观上是否存在可行的途径，而是这样做是否符合道义，可以比较 <a href="#4.3" class="lyref">4.3</a>  的&ldquo;能&rdquo;。<span class="lyterm">可求</span>即当求。它的反面就像朱熹形容的，<span class="lyq">惟得之求，无复廉耻。</span>（《宋史&middot;朱熹传》。）<span class="lyseealso"><span>【参】</span><span><a href="#4.5" class="lyref">4.5</a> 。北宋苏轼《上梅直讲书》：<span class="lyq">人不可以<a href="#gou3">苟</a>富贵，亦不可以<a href="#tu2a">徒</a>贫贱。</span>（梅直讲：即梅尧臣，时任国子监直讲，辅助博士、助教讲授经学。）</span></span>
+<span class="lyterm">可</span>：这里的判断标准，并非客观上是否存在可行的途径，而是这样做是否符合道义，可以比较 <a href="#4.3" class="lyref">4.3</a>  的&ldquo;能&rdquo;。<span class="lyterm">可求</span>即当求。它的反面就像朱熹形容的，<span class="lyq">惟得之求，无复廉耻</span>（《宋史&middot;朱熹传》）。<span class="lyseealso"><span>【参】</span><span><a href="#4.5" class="lyref">4.5</a> 。苏轼《上梅直讲书》：<span class="lyq">人不可以<a href="#gou3">苟</a>富贵，亦不可以<a href="#tu2a">徒</a>贫贱。</span>（梅直讲：即梅尧臣，时任国子监直讲，辅助博士、助教讲授经学。）</span></span>
 </p>
 </li>
 <li>
 <p>
-<span class="lyterm">执鞭之士</span>：《周礼》中有两说，一是在市集门口巡视和维持秩序的&ldquo;胥&rdquo;（<span class="lypinyin">xū</span>，见《地官司徒》），一是天子诸侯出行时驱赶行人回避的&ldquo;条狼氏&rdquo;（见《秋官司寇》），都属于下等差役。而皇侃《论语义疏》解释为驾车之士，就与 <a href="#9.2" class="lyref">9.2</a>  暗合。<span class="lyexample"><span>【例】</span><span>《史记&middot;管晏列传》结尾，司马迁感慨：<span class="lyq">假令<a href="#yanpingzhong">晏子</a>而在，余虽为之执鞭，所忻慕焉。</span>（忻：通&ldquo;欣&rdquo;。）</span></span>
+<span class="lyterm">执鞭之士</span>：《周礼》中有两说，一是在市集门口巡视并维持秩序的&ldquo;胥&rdquo;（<span class="lypinyin">xū</span>，见《地官司徒》），一是天子诸侯出行时驱赶行人回避的&ldquo;条狼氏&rdquo;（见《秋官司寇》），都属于下等差役。而皇侃《论语义疏》解释为驾车之士，就与 <a href="#9.2" class="lyref">9.2</a>  暗合。<span class="lyexample"><span>【例】</span><span>《史记&middot;管晏列传》结尾，司马迁感慨：<span class="lyq">假令<a href="#yanpingzhong">晏子</a>而在，余虽为之执鞭，所忻慕焉。</span>（忻：通&ldquo;欣&rdquo;。）</span></span>
 </p>
 </li>
 </ul>
@@ -12780,7 +12781,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<a id="wei2b"></a><span class="lyterm">为</span>（<span class="lypinyin">w&eacute;i</span>）：指学。为作动词时，等于一般性的做，do，可以搭配的对象很宽泛，要根据上下文具体理解。<span class="lyseealso"><span>【参】</span><span><a href="#16.13" class="lyref">16.13</a> </span></span>
+<span class="lyterm"><a href="#wei2b">为</a></span>（<span class="lypinyin">w&eacute;i</span>）：指学。<span class="lyseealso"><span>【参】</span><span><a href="#16.13" class="lyref">16.13</a> </span></span>
 </p>
 </li>
 <li>
