--- a/aboly.html
+++ b/aboly.html
@@ -4078,8 +4078,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">侍</span>：陪在尊长旁边，以随时服侍。又分为侍立和侍坐，这里是前者，如果是侍坐就会明确写出来。开头把颜回列在年长他21岁的子路之前，可能是编辑者推重其造诣较高。随后的回答，仍以子路为先。后面的对话反映了师徒三人各自的性格与眼界。<span class="lyseealso"><span>【参】</span><span><a href="#11.26" class="lyref">11.26</a> </span></span>
-</p>
+<span class="lyterm">侍</span>：陪在尊长旁边，以随时服侍。又分为侍立和侍坐，这里是前者，如果是侍坐就会明确写出来，如 <a href="#11.26" class="lyref">11.26</a> 。这里把颜回列在年长他21岁的子路之前，可能是编辑者推重其造诣较高。随后的答问，仍以子路为先。对话的内容，反映了师徒三人各自的性格与眼界。</p>
 </li>
 <li>
 <p>
@@ -4866,7 +4865,7 @@ img.characterimg {
 <a id="nanzi"></a><span class="lyterm">南子</span>：<a href="#songguo">宋国</a>宗室之女，子姓，<a href="#weilinggong">卫灵公</a>的夫人，美艳而有<a href="#songzhao">淫乱</a>之名。前496年，卫太子<a href="#weijun">蒯聩</a>因受宋人<a href="#songzhao">耻笑</a>，欲杀南子，触怒了灵公，蒯聩出奔。3年后灵公去世，蒯聩之子蒯辄继任为<a href="#weijun">卫出公</a>。又12年后，蒯聩夺位为卫庄公，遂杀南子。</p>
 <div class="lyseealso">
 <p>
-<span>【参】</span><span>根据孔子周游列国的行程推算，子见南子约在前496年。其经过《左传》未载，仅存于《史记&middot;孔子世家》：<span class="lyq">反乎卫，主<a href="#quboyu">蘧伯玉</a>家。灵公夫人有南子者，使人谓孔子曰：&ldquo;四方之君子不辱欲与寡君为兄弟者，必见<a href="#16.14">寡小君</a>。寡小君愿见。&rdquo;孔子辞谢，不得已而见之。夫人在<a href="#chi1">絺</a><a href="#wei2a">帷</a>中，孔子入门，<a href="#nanmian">北面</a><a href="#baili">稽首</a>。夫人自帷中<a href="#zaibai">再拜</a>，环佩玉声璆然。孔子曰：&ldquo;吾<a href="#xiang4a">乡</a>为弗见，见之，礼答焉。&rdquo;子路不说。孔子<a href="#shi3a">矢</a>之曰：&ldquo;予所否者，天厌之！天厌之！&rdquo;居卫月余，灵公与夫人同车，宦者雍渠参乘，出，使孔子为次乘，招摇市过之。孔子曰：&ldquo;吾未见好德如好色者也。&rdquo;于是丑之，去卫，过曹。</span>（主：住。璆（<span class="lypinyin">qi&uacute;</span>）：玉饰相互撞动的叮咚声。<a id="cansheng"></a>同乘一车者，尊长居左，<a href="#yu4b">御</a>者居中，参<a href="#sheng4a">乘</a>就是车右陪乘人员。）</span>
+<span>【参】</span><span>根据孔子周游列国的行程推算，子见南子约在前496年。其经过《左传》未载，仅见于《史记&middot;孔子世家》：<span class="lyq">反乎卫，主<a href="#quboyu">蘧伯玉</a>家。灵公夫人有南子者，使人谓孔子曰：&ldquo;四方之君子不辱欲与寡君为兄弟者，必见<a href="#16.14">寡小君</a>。寡小君愿见。&rdquo;孔子辞谢，不得已而见之。夫人在<a href="#chi1">絺</a><a href="#wei2a">帷</a>中，孔子入门，<a href="#nanmian">北面</a><a href="#baili">稽首</a>。夫人自帷中<a href="#zaibai">再拜</a>，环佩玉声璆然。孔子曰：&ldquo;吾<a href="#xiang4a">乡</a>为弗见，见之，礼答焉。&rdquo;子路不说。孔子<a href="#shi3a">矢</a>之曰：&ldquo;予所否者，天厌之！天厌之！&rdquo;居卫月余，灵公与夫人同车，宦者雍渠参乘，出，使孔子为次乘，招摇市过之。孔子曰：&ldquo;吾未见好德如好色者也。&rdquo;于是丑之，去卫，过曹。</span>（主：住。璆（<span class="lypinyin">qi&uacute;</span>）：玉饰相互撞动的叮咚声。<a id="cansheng"></a>同乘一车者，尊长居左，<a href="#yu4b">御</a>者居中，参<a href="#sheng4a">乘</a>就是车右陪乘人员。）</span>
 </p>
 <p>据《汉书&middot;王莽传》，西汉末年对此的理解是：<span class="lyq">孔子见南子，<a href="#zhougong">周公</a>居<a href="#she4a">摄</a>，盖<a href="#quan2">权</a>时也。</span>
 </p>
@@ -7369,20 +7368,16 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">侃侃</span>：说话慷慨激昂的样子。后有成语&ldquo;侃侃而谈&rdquo;。</p>
+<span class="lyterm">侃侃</span>：从容不迫的样子。<span class="lyterm">侃</span>的本义是说话慷慨激昂。后来有成语&ldquo;侃侃而谈&rdquo;，既可以形容说话理直气壮，也可以形容说话从容不迫。</p>
+<p>
+<span class="lyterm">訚訚</span>（<span class="lypinyin">y&iacute;n</span>）：中正直言的样子。<span class="lyterm">訚</span>多连用于&ldquo;訚訚&rdquo;，或用于姓名。<a href="#11.13" class="lyref">11.13</a>  的侃侃、訚訚，意思也相同。</p>
 </li>
 <li>
 <p>
-<span class="lyterm">訚訚</span>（<span class="lypinyin">y&iacute;n</span>）：和蔼中正的样子。这些态度的不同，并不是势利眼，而是自觉维护礼法制度的尊严。<span class="lyseealso"><span>【参】</span><span><a href="#3.13" class="lyref">3.13</a> <a href="#3.18" class="lyref">3.18</a> </span></span>
+<span class="lyterm">踧踖</span>（<span class="lypinyin">c&ugrave; j&iacute;</span>）：恭谨局促的样子，似乎脚都不知道怎么放才合适了。这是站立时的仪态。<span class="lyseealso"><span>【参】</span><span><a href="#3.13" class="lyref">3.13</a> <a href="#3.18" class="lyref">3.18</a> </span></span>
 </p>
-</li>
-<li>
 <p>
-<span class="lyterm">踧踖</span>（<span class="lypinyin">c&ugrave; j&iacute;</span>）：恭敬局促的样子。</p>
-</li>
-<li>
-<p>
-<span class="lyterm">与与</span>：行走缓慢的样子。这是朝堂之上站在国君对面的进退，而 <a href="#9.10" class="lyref">9.10</a>  的<span class="lyq">过之必趋</span>是横向经过别人面前。</p>
+<span class="lyterm">与与</span>：行走安适缓慢的样子，这个意义较罕见。这是朝堂之上站在国君对面的进退，而 <a href="#9.10" class="lyref">9.10</a>  的<span class="lyq">过之必趋</span>是横向经过别人面前。</p>
 </li>
 </ul>
 </div>
@@ -7644,7 +7639,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">肉虽多，不使胜食气</span>：就算供应很多肉，也不要吃过量，使肥甘厚味压倒谷菜之气。<span class="lyseealso"><span>【参】</span><span>清代徐文弼《寿世传真&middot;修养宜饮食调理》：<span class="lyq">谷粟<a href="#shu1">菽</a>麦，自然冲和之味，有益人补阴之功。&hellip;&hellip;若人之所为者，皆烹饪偏厚之味，有致疾伤命之虞。&hellip;&hellip;茹淡者安，啖厚者危。&hellip;&hellip;厚不如薄，多不如少，虑患而谨节之，畏危而坚忍之，举匕箸如<a href="#jing3">儆</a>戈矛，不与肉食者同其陷溺，宁负我生之腹，不负生我之天，是亦卫生之一道也。</span>（茹：吃。匕：相当于汤匙。箸（<span class="lypinyin">zh&ugrave;</span>）：筷子。卫生：养生。）</span></span>
+<span class="lyterm">肉虽多，不使胜食气</span>：就算供应很多肉，也不要吃过量，使肥甘厚味压倒谷菜之气。<span class="lyseealso"><span>【参】</span><span>清代徐文弼《寿世传真&middot;修养宜饮食调理》：<span class="lyq">谷粟<a href="#shu1">菽</a>麦，自然冲和之味，有益人补阴之功。&hellip;&hellip;若人之所为者，皆烹饪偏厚之味，有致疾伤命之虞。&hellip;&hellip;茹淡者安，啖厚者危。&hellip;&hellip;厚不如薄，多不如少，虑患而谨节之，畏危而坚忍之，举匕箸如<a href="#jing3">儆</a>戈矛，不与肉食者同其陷溺，宁负我生之腹，不负生我之天，是亦卫生之一道也。</span>（虞：忧。茹：吃。匕：相当于汤匙。箸（<span class="lypinyin">zh&ugrave;</span>）：筷子。卫生：养生。）</span></span>
 </p>
 </li>
 <li>
@@ -8371,19 +8366,11 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">訚訚</span>（<span class="lypinyin">y&iacute;n</span>）：中正平和的样子。</p>
+<span class="lyterm">行行</span>（<span class="lypinyin">h&agrave;ng</span>）：刚强的样子。这个意义较罕见。</p>
 </li>
 <li>
 <p>
-<span class="lyterm">行行</span>：刚强的样子。</p>
-</li>
-<li>
-<p>
-<span class="lyterm">侃侃</span>：放松适意的样子。</p>
-</li>
-<li>
-<p>
-<span class="lyterm">不得其死然</span>：未必能寿终正寝吧。此话果然<a href="#kuaikuizhiluan">一语成谶</a>。<span class="lyterm">得其死</span>相当于现代汉语的善终，好死。<span class="lyterm">然</span>：句末助词，表示不太强烈的判断。<span class="lyseealso"><span>【参】</span><span><a href="#5.7" class="lyref">5.7</a> </span></span>
+<span class="lyterm">不得其死然</span>：未必能寿终正寝吧。这话果然<a href="#kuaikuizhiluan">一语成谶</a>。<span class="lyterm">得其死</span>相当于现代汉语的善终，好死。<span class="lyterm">然</span>：句末助词，表示不太强烈的判断。<span class="lyseealso"><span>【参】</span><span><a href="#5.7" class="lyref">5.7</a> </span></span>
 </p>
 </li>
 </ul>
@@ -8450,7 +8437,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">过犹不及</span>：事情做过头了，就和做得不够一样（都有缺憾）。<span class="lyseealso"><span>【参】</span><span><a href="#13.21" class="lyref">13.21</a> <a href="#19.3" class="lyref">19.3</a> 。《四书集注》：<span class="lyq">子张才高意广，而好为苟难，故常过中；子夏笃信谨守，而规模狭隘，故常不及。</span>（<a href="#gou3">苟</a>难：意义不大的难事。）亦参 <a href="#3.22" class="lyref">3.22</a>  所引《<a href="#guanzhongyanzi">孔子家语</a>》。</span></span>
+<span class="lyterm">过犹不及</span>：事情做过头了，就和做得不够一样（都有缺憾）。<span class="lyseealso"><span>【参】</span><span><a href="#13.21" class="lyref">13.21</a> <a href="#19.3" class="lyref">19.3</a> 。《四书集注》：<span class="lyq">子张才高意广，而好为苟难，故常过中；子夏笃信谨守，而规模狭隘，故常不及。</span>（<a href="#gou3">苟</a>难：意义不大的难事。）亦参 <a href="#3.22" class="lyref">3.22</a> <a href="#guanzhongyanzi">所引</a>《孔子家语》。</span></span>
 </p>
 </li>
 </ul>
@@ -8759,7 +8746,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">毋吾以也</span>：不要因为我（而不畅所欲言）呀。具体的原因在前面说了：<span class="lyterm">吾一日长（<span class="lypinyin">zhǎng</span>）乎尔</span>。<span class="lyterm">一日</span>表示时间短，是轻松幽默的说法。从4位弟子的排列顺序推测，曾皙的年龄小于子路而大于冉有。</p>
+<span class="lyterm">毋吾以也</span>：不要因为我（而不畅所欲言）呀。具体的原因在前面说了：<span class="lyterm">吾一日长（<span class="lypinyin">zhǎng</span>）乎尔</span>。<span class="lyterm">一日</span>表示时间短，是轻松诙谐的说法。从4位弟子的排列顺序推测，曾皙的年龄小于子路而大于冉有。</p>
 </li>
 <li>
 <p>
@@ -8771,7 +8758,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm"><a href="#she4">摄</a></span>：夹持，挟制，两头受气。</p>
+<span class="lyterm"><a href="#she4">摄</a></span>：夹持，挟制，两头受气。这可以从其本义&ldquo;持&rdquo;理解，也可以从&ldquo;镊&rdquo;理解。</p>
 </li>
 <li>
 <p>
@@ -8787,7 +8774,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">比及</span>：到了，等到。</p>
+<span class="lyterm"><a href="#bi3">比</a>及</span>：到了，等到。</p>
 </li>
 <li>
 <p>
@@ -9530,7 +9517,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<a id="gou3"></a><span class="lyterm">苟</span>：随便，不慎重。<span class="lyexample"><span>【例】</span><span>成语&ldquo;不苟言笑&rdquo;。</span></span>
+<a id="gou3"></a><span class="lyterm">苟</span>：随便，不慎重，又特指不正当，不合礼法，不知羞耻。<span class="lyexample"><span>【例】</span><span>成语&ldquo;不苟言笑&rdquo;、&ldquo;蝇营狗苟&rdquo;。</span></span>
 </p>
 </li>
 </ul>
@@ -9650,7 +9637,12 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">始有</span>：刚开始有点财产。<span class="lyterm">苟合矣</span>：差不多够用了，凑合了。<span class="lyterm">苟</span>：姑且，暂且。</p>
+<span class="lyterm">始有</span>：刚开始有点财产。</p>
+<p>
+<span class="lyterm">苟合矣</span>：差不多够用了，凑合了。<span class="lyterm">苟</span>：姑且，暂且。</p>
+<p>
+<a id="gouhe"></a>另外，<a href="#gou3">苟</a>还可以理解为草率、不合礼法，这时苟合就指不正当的附和或结合，如逢迎巴结，为私利而抱团，或不正当的男女关系。<span class="lyexample"><span>【例】</span><span>成语&ldquo;苟合<a href="#qurong">取容</a>&rdquo;。</span></span>
+</p>
 </li>
 </ul>
 </div>
@@ -12943,7 +12935,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<a id="jin1b"></a><span class="lyterm"><a href="#jin1">矜</a></span>：骄傲自负，自高自大。<a id="lian2"></a><span class="lyterm">廉</span>：品行正直而心胸不广。其本义为堂屋的地面与墙相并形成的直二面角（而不是墙角旮旯），所以有方正之意，又因为相夹而狭，所以还有狭窄之意，《说文解字》就直接解释为仄（狭窄）。常见的清高有气节，或称&ldquo;嶙峋&rdquo;，是它的后起偏义。这里的解释略与各家不同，他们未能指明狭窄，似乎偏离了&ldquo;疾&rdquo;。<span class="lyexample"><span>【例】</span><span>《史记&middot;屈原贾生列传》：<span class="lyq">其志洁，故其称物芳；其行廉，故死而不容。</span></span></span><span class="lyseealso"><span>【参】</span><span>《韩诗外传》第1卷第25章说，<span class="lyq">仁道有四，磏为下</span>（磏（<span class="lypinyin">li&aacute;n</span>）：赤色有棱角的石头，这里通&ldquo;廉&rdquo;），并举<a href="#boyishuqi">伯夷</a>、<a href="#boyishuqi">叔齐</a>、<a href="#yuansi">原思</a>等人为例：<span class="lyq">廉洁直方，<a href="#ji2">疾</a>乱不治，恶邪不<a href="#kuang1">匡</a>，虽居乡里，若坐涂炭，命入朝廷，如赴汤火，非其民不使，非其食弗尝，疾乱世而轻死，弗顾兄弟，&hellip;&hellip;是磏仁者也。&hellip;&hellip;山锐则不高，水径则不深，仁磏则其德不厚。</span>（如赴汤火：形容在所不惜。<a href="#jing4">径</a>：指窄小。）</span></span>
+<a id="jin1b"></a><span class="lyterm"><a href="#jin1">矜</a></span>：骄傲自负，自高自大。<a id="lian2"></a><span class="lyterm">廉</span>：品行正直而心胸不广。其本义为堂屋的地面与墙相并形成的直二面角（而不是墙角旮旯），所以有方正之意，又因为相夹而狭，所以还有狭窄之意，《说文解字》就直接解释为仄（狭窄）。常见的清高有气节，或称&ldquo;嶙峋&rdquo;，是它的后起偏义。这里的解释略与各家不同，他们未能指明狭窄，似乎偏离了&ldquo;疾&rdquo;。<span class="lyexample"><span>【例】</span><span>《史记&middot;屈原贾生列传》：<span class="lyq">其志洁，故其称物芳；其行廉，故死而不容。</span>《史记&middot;郦生陆贾列传》：<span class="lyq">〔平原君朱建〕刻廉刚直，&hellip;&hellip;行不<a href="#gouhe">苟合</a>，义不取容。</span>（刻：严苛。<a id="qurong"></a>取容：讨好别人以求安身。）</span></span><span class="lyseealso"><span>【参】</span><span>《韩诗外传》第1卷第25章说，<span class="lyq">仁道有四，磏为下</span>（磏（<span class="lypinyin">li&aacute;n</span>）：赤色有棱角的石头，这里通&ldquo;廉&rdquo;），并举<a href="#boyishuqi">伯夷</a>、<a href="#boyishuqi">叔齐</a>、<a href="#yuansi">原思</a>等人为例：<span class="lyq">廉洁直方，<a href="#ji2">疾</a>乱不治，恶邪不<a href="#kuang1">匡</a>，虽居乡里，若坐涂炭，命入朝廷，如赴汤火，非其民不使，非其食弗尝，疾乱世而轻死，弗顾兄弟，&hellip;&hellip;是磏仁者也。&hellip;&hellip;山锐则不高，水径则不深，仁磏则其德不厚。</span>（如赴汤火：形容在所不惜。<a href="#jing4">径</a>：指窄小。）</span></span>
 </p>
 </li>
 <li>
@@ -14415,7 +14407,7 @@ img.characterimg {
 <p>
 <a id="youruo"></a><span class="lycharname">有若</span>，<span class="lycharname">有子</span>：字子有，鲁国人，少孔子33岁，《孔子家语&middot;七十二弟子解》称他强识好古。《孟子&middot;滕文公上》、《仲尼弟子列传》载，孔子去世后，众弟子思慕不已，因为有若的气质见识与孔子相似，<a href="#zixia">子夏</a>、<a href="#ziyou">子游</a>、<a href="#zizhang">子张</a>等就奉他为师，但有若之才德不足以服众，这种偶像崇拜很快被放弃了。《礼记&middot;檀弓下》载，<a href="#aigong">鲁哀公</a>曾向他问礼，他去世后，继任的鲁悼公（前467年&mdash;前437年在位）亲自前来吊唁。他在《论语》中出现的4次，都是传道授业的口吻，除 <a href="#12.9" class="lyref">12.9</a>  外，称谓都是有子，待遇仅次于<a href="#zengshen">曾参</a>。 <a href="#1.2" class="lyref">1.2</a> <a href="#1.12" class="lyref">1.12</a> <a href="#1.13" class="lyref">1.13</a> <a href="#12.9" class="lyref">12.9</a> </p>
 <p>
-<a id="yuansi"></a><span class="lycharname">原思</span>，<span class="lycharname">宪</span>：原宪，字子思，少孔子36岁。《仲尼弟子列传》载，孔子去世后，他在乡间隐居，生活极清贫。<a href="#zigong">子贡</a>乘驷马高车来探望他，<span class="lyq">宪<a href="#she4">摄</a>敝衣冠见子贡。子贡耻之，曰：&ldquo;夫子岂<a href="#bing4">病</a>乎？&rdquo;原宪曰：&ldquo;吾闻之：无财者谓之贫，学道而不能行者谓之病。若宪，贫也，非病也。&rdquo;子贡惭，不怿而去，终身耻其言之过也。</span>（怿（<span class="lypinyin">y&igrave;</span>）：喜悦，高兴。）《史记&middot;游侠列传》说他<span class="lyq">读书怀独行君子之德，义不苟合当世，当世亦笑之。&hellip;&hellip;终身空室蓬户，褐衣<a href="#shushi">疏食</a>不厌。死而已四百余年，而弟子志之不倦。</span>（褐衣：粗布衣。） <a href="#6.5" class="lyref">6.5</a> <a href="#14.1" class="lyref">14.1</a> </p>
+<a id="yuansi"></a><span class="lycharname">原思</span>，<span class="lycharname">宪</span>：原宪，字子思，少孔子36岁。《仲尼弟子列传》载，孔子去世后，他在乡间隐居，生活极清贫。<a href="#zigong">子贡</a>乘驷马高车来探望他，<span class="lyq">宪<a href="#she4">摄</a>敝衣冠见子贡。子贡耻之，曰：&ldquo;夫子岂<a href="#bing4">病</a>乎？&rdquo;原宪曰：&ldquo;吾闻之：无财者谓之贫，学道而不能行者谓之病。若宪，贫也，非病也。&rdquo;子贡惭，不怿而去，终身耻其言之过也。</span>（怿（<span class="lypinyin">y&igrave;</span>）：喜悦，高兴。）《史记&middot;游侠列传》说他<span class="lyq">读书怀独行君子之德，义不<a href="#gouhe">苟合</a>当世，当世亦笑之。&hellip;&hellip;终身空室蓬户，褐衣<a href="#shushi">疏食</a>不厌。死而已四百余年，而弟子志之不倦。</span>（褐衣：粗布衣。） <a href="#6.5" class="lyref">6.5</a> <a href="#14.1" class="lyref">14.1</a> </p>
 <p>
 <a id="zaiyu"></a><span class="lycharname">宰予</span>，<span class="lycharname">宰我</span>，<span class="lycharname">予</span>：字子我，鲁国人，少孔子29岁，<a href="#11.3">孔门十哲</a>之一。他口才出众，甚至超过大名鼎鼎的外交家<a href="#zigong">子贡</a>；思维活跃，不仅<a href="#17.21">质疑</a>过三年丧期的必要，还怀疑过黄帝的传说，向孔子追问<a href="#wudi">五帝</a>的由来（《大戴礼记&middot;五帝德》）。可孔子是反感伶牙俐齿的，也不太欣赏出格的想法和行为，《论语》中宰予总是受到敲打。《孟子&middot;公孙丑上》引用他对孔子的评价：<span class="lyq">以予观于夫子，贤于<a href="#yao">尧</a>、<a href="#shun">舜</a>远矣</span>，认为他和<a href="#zigong">子贡</a>、<a href="#youruo">有若</a>一样<span class="lyq">智足以知圣人</span>。 <a href="#3.21" class="lyref">3.21</a> <a href="#5.10" class="lyref">5.10</a> <a href="#6.26" class="lyref">6.26</a> <a href="#11.3" class="lyref">11.3</a> <a href="#17.21" class="lyref">17.21</a> </p>
 <p>
@@ -14739,7 +14731,7 @@ img.characterimg {
 <p>比较浅显易懂的章节不带评。有的评直接连在注解之后，有的放在整章末尾，前面不加圆点。少数个人想法较多的评，就用横线隔开。总之是以看着直观、读着通顺为准。</p>
 <p>没有了逐句翻译，省掉的篇幅就用来进一步解释原文，我称之为&ldquo;例参体&rdquo;。我上学的时候，不太喜欢直接相信字典里的解释，总要找到一个用法相同的典型例子才放心。很多注解的后面，就附上了这类例证，用【例】醒目地标出。为了更好地理解原文的某句话或者一整章的意义，还用【参】补充了一些值得对照的观点，也包括辅助性的背景知识。字词用法上的例证尽量引用《论语》后文，作为预习；观点上的参考尽量引用《论语》前文，作为复习，除非遇到关键的概念，或者值得辨析的情况。例、参引用的原文片段，显示为<span class="lyq">这样</span>，前后不加引号。引文中如果遇到难字，就在随后的（）里加上简注。引文中的省略号，除非另有说明，都是对原文的节略。引文<span class="lyq">〔〕</span>里的话，是对原文的补充说明。</p>
 <p>例、参中的引用，大部分是文言文。除了《论语》章句之间的参照印证以外，它们有的支持或强化了《论语》的观点，有的稍有差异，也有的针锋相对。对于喜欢独立思考的读者，这种参差碰撞似乎比&ldquo;纯净化&rdquo;更有营养。但它受限于我的阅读范围，在本书维护过程中，我会随时把更合适的内容增补进来。古义今用是我比较留意的情况，有时也会用现代汉语的成语和常用词作为例证。另外还引用了少量英文材料，大都提供了汉语译文。其中，《圣经》英文采用英王钦定本（<em>King James Bible</em>），中文采用和合本；其它除了标明译者的几处，都是我翻译的。</p>
-<p>可是过犹不及，补充材料太多，会有明显的不平衡感，也影响对原文的专注。<strong>建议始终把理解原文放在首位</strong>，额外的内容不妨选读。</p>
+<p>可是过犹不及，补充材料太多，会有明显的不平衡感，也影响对原文的专注。<strong>建议始终把理解原文放在首位</strong>，额外的内容不妨选读。尤其对那些试图概括总结的话，更应该有鉴别地看待。</p>
 <p>注解中还包含一些语法方面的内容。中国古代强调熟读成诵、文义自达，不太重视形式化规则，汉语语法是清末开始受西方影响才逐渐建立的。语法很实用，但汉语（包括古汉语）自有其特点，比如往往一个字就是一个词，词性又灵活多变，名词、动词、形容词、副词等等左右逢源，不像英语那样有明确的对错之分。所以，既要善用语法的分析能力，也应该知道，目前的语法体系还未能完善地概括汉语的特征。</p>
 <p>本书采用了很多超链接，这是电子版的一大优势，可以更好地形成概念网络。比如，有时单解释一个词感觉不够到位，还会链接到它更基本的含义。要有效使用本书，先要熟悉跳来跳去的操作，在跳之前要留意当前位置，浏览器也应该有后退、前进的功能。使用的超链接主要有3种样式：圆角小框跳转到某章开头，例如 <a href="#1.1" class="lyref">1.1</a> ；<a href="#junzi">这样</a>的跳转到本书内的某个位置；<a href="http://www.abolybook.org/" class="lyurl" target="_blank">这样</a>的打开外部网址链接。</p>
 <p>自古以来，《论语》的注解可谓千锤百炼，但我有时仍对旧注无法满意，思来想去，还是按自己的理解写了出来，记为&ldquo;与各家不同&rdquo;。在这方面，我很不喜欢标新立异，只是觉得自己的想法确实好一些，恳请读者指正。当然，这些解释未必是我第一个想到的，只是没有精力穷举相关的材料。它们有的与旧注差别很大，有的只是细节不同，共计8处：<a href="#1.13" class="lyref">1.13</a> <a href="#3.4" class="lyref">3.4</a> <a href="#3.23" class="lyref">3.23</a> <a href="#8.3" class="lyref">8.3</a> <a href="#8.9" class="lyref">8.9</a> <a href="#12.1" class="lyref">12.1</a> <a href="#17.1" class="lyref">17.1</a> <a href="#17.16" class="lyref">17.16</a> 。</p>
